# Ocean-Proc

./: .dockerignore  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  README.md  bids_wrapper.py  group_series.py  ocean_proc.py  oceanparse.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
docs/source/: advanced.rst  conf.py  home.md  index.rst  oceanproc.rst  quickstart.rst  usage.rst
docs/source/apifolder/: modules.rst  oceanproc.rst
oceanproc/: __init__.py  bids_wrapper.py  events_long.py  fmriprep_wrapper.py  group_series.py  ocean_proc.py  oceanparse.py  utils.py  wrapper.py
oceanproc/firstlevel/: run_glm.py
oceanproc/firstlevel/tests/: test_run_glm.py
oceanproc/grouplevel/: computations.py  design_mat_utils.py  dscalar_utils.py  ols.py  utils.py
oceanproc/tests/: group_series_test.py
oceanproc/tests/assets/: test.xml
oceanproc/web/: TODO.md  app.py  config.json  get_parser_json.py
oceanproc/web/static/components/: ArgparseForm.js  ArgparseFormEntry.js  DirIcon.js  FileBrowser.js  FileBrowserOpenBtn.js  FileEntry.js  FileIcon.js  OceanprocForm.js  styles.css
oceanproc/web/templates/: filesystem.html  filesystem_fail.html  oceanproc_form.html  username_card_component_test.html
scripts/: sync_dependencies.sh
