[tool.poetry]
name = "oceanproc"
version = "0.1.0"
description = "MRI preprocessing for WUSTL Ocean labs"
authors = ["Ramone Agard <agardr@wustl.edu>", "Joey Scanga <joeyscanga92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sphinx-rtd-theme = "^2.0.0"
flask = "^3.0.3"
asttokens = "^2.4.1"
numpy = "^2.0.0"
pandas = "^2.2.2"
nilearn = "^0.10.4"
scipy = "^1.14.0"
matplotlib = "^3.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
sphinx = "^7.3.7"
twine = "^5.1.0"

[tool.poetry.scripts]
oceanproc = "oceanproc.ocean_proc:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
