[tool.pdm.dev-dependencies]
dev = [
    "pytest<9.0.0,>=8.2.2",
    "sphinx<8.0.0,>=7.3.7",
    "twine<6.0.0,>=5.1.0",
    "ipython<9.0.0,>=8.29.0",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "Ramone Agard", email = "agardr@wustl.edu"},
    {name = "Joey Scanga", email = "joeyscanga92@gmail.com"},
]
requires-python = "<3.13,>=3.10"
dependencies = [
    "sphinx-rtd-theme<3.0.0,>=2.0.0",
    "flask<4.0.0,>=3.0.3",
    "asttokens<3.0.0,>=2.4.1",
    "numpy>=1.26.0",
    "pandas<3.0.0,>=2.2.2",
    "nilearn<1.0.0,>=0.10.4",
    "scipy>=1.13.0",
    "matplotlib<4.0.0,>=3.9.1",
    "beautifulsoup4>=4.12.0",
    "numba<1.0.0,>=0.60.0",
    "torch<3.0.0,>=2.5.1",
    "torchvision<1.0.0,>=0.20.1",
    "torchaudio<3.0.0,>=2.5.1",
]
name = "oceanproc"
version = "0.1.0"
description = "MRI preprocessing for WUSTL Ocean labs"
readme = "README.md"

[project.scripts]
oceanproc = "oceanproc.ocean_proc:main"
oceanfla = "oceanproc.firstlevel.run_glm:main"

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.2.2",
    "sphinx<8.0.0,>=7.3.7",
    "twine<6.0.0,>=5.1.0",
    "ipython<9.0.0,>=8.29.0",
]
